added eclipse button and correct layout

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,9 +5,14 @@
 
 @import 'partials/advert';
 @import 'partials/base';
+@import 'partials/bc';
 @import 'partials/button';
+@import 'partials/flex';
 @import 'partials/layout';
+@import 'partials/lights';
 @import 'partials/map';
+@import 'partials/more';
+@import 'partials/summary-side';
 @import 'partials/utility';
 
 // Add styles here
