--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -42,6 +42,9 @@ body {
 
 p.excerpt { margin-top: 5px; }
 
+figure{ margin: 0; }
+img{ margin: 0; }
+
 a {
 	
 	&,
@@ -67,12 +70,16 @@ a {
 	text-shadow: none;
 }
 
+ul{
+	padding: 0 0 0 20px;
+}
+
 hr {
 	
 	border: 0;
 	border-top: 4px solid $graye;
 	height: 0;
-	margin: 50px 0;
+	margin: 10px 0;
 	padding: 0;
 	-webkit-box-sizing: content-box;
 	   -moz-box-sizing: content-box;
