--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -5,9 +5,10 @@
 
 #content{
 	width: 100%;
-	max-width: 1200px;
+	max-width: 1320px;
 	margin: 0 auto;
-	padding: 10px;
+	padding: 0;
+	overflow: hidden;
 }
 
 // Meant to wrap `.core`:
@@ -74,7 +75,7 @@
 			font-size: 50px;
 			line-height: 45px;
 			letter-spacing: normal;
-			color: $graye;
+			color: $milk;
 			margin-bottom: 5px;
 			
 			@media all and (min-width: 1280px) {
@@ -94,7 +95,7 @@
 			font-size: 20px;
 			line-height: 25px;
 			//letter-spacing: .15em;
-			color: $grayc;
+			color: $grayd;
 			text-rendering: optimizeLegibility;
 			-webkit-font-feature-settings: "kern";
 			   -moz-font-feature-settings: "kern";
