--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'partials/advert';
 @import 'partials/base';
 @import 'partials/bc';
+@import 'partials/bd';
 @import 'partials/button';
 @import 'partials/flex';
 @import 'partials/layout';
