--- a/_src/sass/main.scss
+++ b/_src/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'partials/bc';
 @import 'partials/bd';
 @import 'partials/button';
+@import 'partials/countdown';
 @import 'partials/flex';
 @import 'partials/layout';
 @import 'partials/lights';
