--- a/_src/sass/partials/_bd.scss
+++ b/_src/sass/partials/_bd.scss
@@ -35,6 +35,18 @@ h4, .h4 { font-size: 28px; }   /* 28px */
 h5, .h5 { font-size: 22px; } /* 22px */
 h6, .h6 { font-size: 16px; }   /* 16px */
 
+.label{
+	font-family: Arial,sans-serif;
+	font-size: .813em;
+	font-weight: bold;
+	line-height: 1.15313653;
+	color: #ae1a1f;
+	letter-spacing: .1em;
+	text-transform: uppercase;
+	margin: 0;
+	padding: .34594096em 0;
+}
+
 .dropcap::first-letter{
 	float: left;
 	font-size: 3.125em;
