Working on slideshow

--- a/_src/sass/main.scss
+++ b/_src/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'partials/button';
 @import 'partials/countdown';
 @import 'partials/flex';
+@import 'partials/gallery';
 @import 'partials/layout';
 @import 'partials/lights';
 @import 'partials/map';
