--- a/_src/sass/partials/_bd.scss
+++ b/_src/sass/partials/_bd.scss
@@ -65,7 +65,7 @@ h6, .h6 { font-size: 16px; }   /* 16px */
 	
 	li {
 		@include miller-bold();
-		font-size: 1em; /* 16px */
+		font-size: 16px; /* 16px */
 		font-weight: bold;
 		line-height: 1.125; /* (((1.5 / 1) = 1.5) * .75) = 1.125 */
 		letter-spacing: .01em;
