--- a/_src/sass/partials/_bd.scss
+++ b/_src/sass/partials/_bd.scss
@@ -78,6 +78,17 @@ h6, .h6 { font-size: 16px; }   /* 16px */
 	}
 }
 
+.tip{
+	font-family: Arial,sans-serif;
+	font-size: .7em;
+	line-height: 1.2em;
+	letter-spacing: .05em;
+	margin: 0 0 5px;
+	text-transform: uppercase;
+	color: #999;
+	text-align: center;
+}
+
 footer p.jump{
 	font-style: italic;
 	text-align: right;
